# DAMER

./: AST.cpp  AST.h  CMakeLists.txt  LTL2PT.cpp  README.md  SBA.dot  base.cpp  base.h  condition_tree.cpp  condition_tree.h  cpn.cpp  cpn.h  cpn_rg.cpp  cpn_rg.h  criteria.cpp  expression_tree.cpp  expression_tree.h  lex.y.cpp  ltl.doc  main.cpp  pdnet_parseoption.cpp  pdnet_parseoption.h  pre_process.cpp  product.cpp  product.h  result.txt  slice.cpp  v_table.cpp  v_table.h  y.tab.cpp  y.tab.h
BA/: Data_Structures.cpp  Data_Structures.h  Lexer.cpp  Lexer.h  SBA.cpp  SBA.h  Syntax_Tree.cpp  Syntax_Tree.h  TBA.cpp  TBA.h  TGBA.cpp  TGBA.h  VWAA.cpp  VWAA.h  buchi.cpp  buchi.h  set.h  xml2ltl.cpp  xml2ltl.h
newfile/: z-1.c  z-fib_bench-1.c  z-fib_bench-2.c  z-lazy01.c  z-stateful01-1.c  z-stateful01-2.c  z-sync01.c  z-triangular-1.c  z-triangular-2.c
test/: 1.c  bigshot_p.i  bigshot_s.i  bigshot_s2.i  fib_bench-1-V.x.txt  fib_bench-1-V.xml  fib_bench-1.c  fib_bench-1.i  fib_bench-2-V.x.txt  fib_bench-2-V.xml  fib_bench-2.c  fib_bench-2.i  lazy01-V.x.txt  lazy01-V.xml  lazy01.i  queue_ok.c  queue_ok.i  singleton.i  singleton_with-uninit-problems.i  stack-1.c  stack-1.i  stack-2.c  stack-2.i  stateful01-1-V.x.txt  stateful01-1-V.xml  stateful01-1.c  stateful01-1.i  stateful01-2-V.x.txt  stateful01-2-V.xml  stateful01-2.c  stateful01-2.i  sync01-V.x.txt  sync01-V.xml  sync01.i  triangular-1-V.x.txt  triangular-1-V.xml  triangular-1.i  triangular-2-V.x.txt  triangular-2-V.xml  triangular-2.c  (+5 more)
test-LTLV/: fib_bench-1-F.xml  fib_bench-1-V.xml  sync01-V.xml  sync01.c
test_LTLF/: fib_bench-2-V.xml  lazy01-V.xml  lazy01.c  stateful01-1-V.xml  stateful01-2-V.xml  (+3 more)
